# uv-python-monorepo-bazel

./: .bazelignore  .bazelrc  .gitignore  .npmrc  .venv  AGENTS.md  BUILD.bazel  CLAUDE.md  MEMORY.md  MODULE.bazel  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  requirements.in  requirements.txt  ty.toml
.claude/: settings.local.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.devcontainer/postgres-init/: 01-create-app-user.sql
apps/flow-ui/: BUILD.bazel  next.config.js  next.standalone.mjs  package.json
apps/flow-ui/src/: middleware.js
apps/flow-ui/src/app/: globals.css  layout.jsx  page.jsx
apps/flow-ui/src/app/flow/: FlowApp.jsx  data.js
apps/flow-ui/src/app/login/: BrandPanel.jsx  LoginForm.jsx  LoginScreen.jsx  page.jsx
apps/flow-ui/src/lib/: api.js  auth.js  nodeTypes.js
apps/flow_backend/: .env.example  BUILD.bazel  alembic.ini  config.py  containers.py  main.py  migrate.py  roles_test.py  seed_dev.py
apps/flow_backend/api/: exception_handlers.py
apps/flow_backend/api/auth/: dependencies.py  endpoints.py  schemas.py
apps/flow_backend/api/node_types/: endpoints.py  schemas.py
apps/flow_backend/api/workflows/: endpoints.py  schemas.py
apps/flow_backend/application/node_types/: unit_of_work.py  use_cases.py
apps/flow_backend/application/workflows/: unit_of_work.py  use_cases.py
apps/flow_backend/containers/: __init__.py  identity.py  node_types.py  workflows.py
apps/flow_backend/domain/identity/: exceptions.py  models.py  repositories.py
apps/flow_backend/domain/node_types/: catalog.py  models.py  repositories.py
apps/flow_backend/domain/shared/: value_objects.py
apps/flow_backend/domain/workflows/: events.py  exceptions.py  models.py  repositories.py
apps/flow_backend/infrastructure/: database.py
apps/flow_backend/infrastructure/auth/: password.py  tenant_context.py  token_service.py
apps/flow_backend/infrastructure/identity/: auth_service.py  orm.py  repositories.py  resolver.py
apps/flow_backend/infrastructure/node_types/: orm.py  repositories.py
apps/flow_backend/infrastructure/outbox/: models.py  relay.py  repository.py
apps/flow_backend/infrastructure/workflows/: orm.py  repositories.py
apps/flow_backend/migrations/: env.py
apps/flow_backend/migrations/versions/: 0001_initial_schema.py  0002_full_schema.py  0003_user_credentials.py  0004_membership_lookup.py
apps/flow_backend/roles/: __init__.py  api.py  gateway.py  ingestion.py  reconciler.py  worker.py
apps/flow_backend/tests/integration/: test_auth.py  test_migrations.py  test_node_types.py  test_workflows.py
apps/flow_backend/tests/unit/: test_config.py
apps/flow_backend/tests/unit/application/workflows/: test_use_cases.py
apps/flow_backend/tests/unit/auth/: test_auth.py
apps/flow_backend/tests/unit/domain/node_types/: test_output_spec.py
apps/flow_backend/tests/unit/domain/workflows/: test_models.py
apps/greeter/: BUILD.bazel  main.py  main_test.py
apps/hello/: BUILD.bazel  main.py  main_test.py
apps/workflows/: BUILD.bazel  activities.py  example_graph.py  example_graph_test.py  starter.py  worker.py
docs/adr/: 0001-interpreter-on-temporal-execution-model.md  0002-run-state-stored-outside-temporal.md  0003-condition-evaluation-via-activity.md  0004-run-read-model-and-realtime-reporting.md  0005-run-failure-and-recovery.md  0006-trigger-system-and-provisioning.md  0007-versioning-routing-policy-and-canary.md  0008-credentials-and-secrets.md  0009-node-type-system.md  0010-expression-and-reference-subsystem.md  0011-auth-multitenancy-rbac.md  0012-persistence-and-event-sourced-read-model.md  0013-reliability-and-idempotency.md  0014-dynamic-config-derived-node-outputs.md  0015-backend-service-topology.md  0016-technology-stack.md  0017-testing-and-quality-strategy.md  0018-python-service-layer-architecture.md  0019-dependency-injection-python.md  0020-unit-of-work-pattern.md  0021-transactional-outbox-event-delivery.md  0022-cross-context-anti-corruption-layer.md  0023-configuration-management.md  0024-error-handling.md  README.md
docs/architecture/: data-model.md  hld-overview.md
docs/brainstorming/: brainstorming-session-2026-06-16.md  brainstorming-session-2026-06-17.md
docs/implementation/: pr-3-auth.md  pr-ladder.md
githooks/: check-config.sh  pre-commit
libs/common/: BUILD.bazel  greetings_test.py
libs/mathutils/: arithmetic_test.py
libs/workflow_engine/: BUILD.bazel  README.md  model.py  model_test.py  workflow.py
tools/: BUILD.bazel  tools.lock.json
tools/format/: BUILD.bazel
tools/lint/: BUILD.bazel  linters.bzl
