load("@npm//:defs.bzl", "npm_link_all_packages")
load("@aspect_rules_py//py:defs.bzl", "py_library", "py_venv")
load("@rules_uv//uv:pip.bzl", "pip_compile")

npm_link_all_packages()

pip_compile(name = "generate_requirements_txt")

exports_files([
    "ruff.toml",
    "ty.toml",
])

py_library(
    name = "all_deps",
    deps = [
        "@pypi//cowsay",
        "@pypi//rich",
        "@pypi//temporalio",
    ],
)

py_venv(
    name = "venv",
    deps = [":all_deps"],
)
