"Python monorepo using rules_py + rules_uv"

bazel_dep(name = "aspect_rules_py", version = "1.11.5")
bazel_dep(name = "rules_uv", version = "0.89.2")
bazel_dep(name = "rules_python", version = "2.0.1")
bazel_dep(name = "aspect_bazel_lib", version = "2.22.5")
bazel_dep(name = "rules_cc", version = "0.2.18")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(python_version = "3.14.0", is_default = True)
use_repo(python, "python_3_14_0")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pypi",
    python_version = "3.14.0",
    requirements_lock = "//:requirements.txt",
)
use_repo(pip, "pypi")
