"Python and Next.js monorepo"

bazel_dep(name = "aspect_rules_py", version = "1.11.5")
bazel_dep(name = "rules_uv", version = "0.89.2")
bazel_dep(name = "rules_python", version = "2.0.1")
bazel_dep(name = "aspect_bazel_lib", version = "2.22.5")
bazel_dep(name = "rules_cc", version = "0.2.18")
bazel_dep(name = "aspect_rules_lint", version = "2.5.2")
bazel_dep(name = "buildifier_prebuilt", version = "8.5.1.2")
bazel_dep(name = "rules_multitool", version = "1.11.1")

# Override transitive rules_go (rules_buf -> gazelle 0.34.0 -> rules_go 0.42.0)
# with a version compatible with rules_cc >= 0.1 (post-CcInfo removal).
bazel_dep(name = "rules_go", version = "0.60.0")
bazel_dep(name = "gazelle", version = "0.51.0")
bazel_dep(name = "aspect_rules_js", version = "3.2.2")
bazel_dep(name = "rules_nodejs", version = "6.7.3")

node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node")
node.toolchain(node_version = "22.22.0")

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm")
npm.npm_translate_lock(
    name = "npm",
    data = [
        "//:package.json",
        "//:pnpm-workspace.yaml",
        "//apps/flow-ui:package.json",
    ],
    npmrc = "//:.npmrc",
    pnpm_lock = "//:pnpm-lock.yaml",
    update_pnpm_lock = True,
    verify_node_modules_ignored = "//:.bazelignore",
)
use_repo(npm, "npm")

multitool = use_extension("@rules_multitool//multitool:extension.bzl", "multitool")
multitool.hub(lockfile = "//tools:tools.lock.json")
use_repo(multitool, "multitool")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    is_default = True,
    python_version = "3.14.0",
)
use_repo(python, "python_3_14_0")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pypi",
    python_version = "3.14.0",
    requirements_lock = "//:requirements.txt",
)
use_repo(pip, "pypi")
