load("@aspect_rules_py//py:defs.bzl", "py_binary", "py_library", "py_test")

# App-specific composition: roles + config. Reusable plumbing lives in
# //packages/service. One build; role chosen at launch by `--role` (ADR-0015).
py_library(
    name = "flow_backend_lib",
    srcs = [
        "__init__.py",
        "config.py",
        "roles/__init__.py",
        "roles/api.py",
        "roles/gateway.py",
        "roles/ingestion.py",
        "roles/reconciler.py",
        "roles/worker.py",
        # api layer
        "api/__init__.py",
        "api/exception_handlers.py",
        "api/workflows/__init__.py",
        "api/workflows/endpoints.py",
        "api/workflows/schemas.py",
        # domain layer
        "domain/__init__.py",
        "domain/shared/__init__.py",
        "domain/shared/value_objects.py",
        "domain/workflows/__init__.py",
        "domain/workflows/events.py",
        "domain/workflows/exceptions.py",
        "domain/workflows/models.py",
        "domain/workflows/repositories.py",
        # application layer
        "application/__init__.py",
        "application/workflows/__init__.py",
        "application/workflows/unit_of_work.py",
        "application/workflows/use_cases.py",
        # infrastructure layer
        "infrastructure/__init__.py",
        "infrastructure/database.py",
        "infrastructure/outbox/__init__.py",
        "infrastructure/outbox/models.py",
        "infrastructure/outbox/repository.py",
        "infrastructure/outbox/relay.py",
        "infrastructure/workflows/__init__.py",
        "infrastructure/workflows/orm.py",
        "infrastructure/workflows/repositories.py",
        # containers
        "containers/__init__.py",
        "containers/workflows.py",
        # migrations
        "migrations/__init__.py",
        "migrations/env.py",
        "migrations/versions/__init__.py",
        "migrations/versions/0001_initial_schema.py",
        "migrations/versions/0002_full_schema.py",
    ],
    imports = ["../.."],
    visibility = ["//visibility:public"],
    deps = [
        "//packages/common",
        "//packages/service",
        "@pypi//dependency_injector",
        "@pypi//fastapi",
        "@pypi//pydantic",
        "@pypi//pydantic_settings",
        "@pypi//sqlalchemy",
        "@pypi//asyncpg",
        "@pypi//alembic",
    ],
)

py_binary(
    name = "flow_backend",
    srcs = ["main.py"],
    main = "main.py",
    visibility = ["//visibility:public"],
    deps = [":flow_backend_lib"],
)

py_test(
    name = "models_test",
    srcs = ["tests/unit/domain/workflows/test_models.py"],
    main = "tests/unit/domain/workflows/test_models.py",
    tags = ["unit"],
    deps = [":flow_backend_lib"],
)

py_test(
    name = "use_cases_test",
    srcs = ["tests/unit/application/workflows/test_use_cases.py"],
    main = "tests/unit/application/workflows/test_use_cases.py",
    tags = ["unit"],
    deps = [":flow_backend_lib"],
)

py_test(
    name = "config_test",
    srcs = ["tests/unit/test_config.py"],
    main = "tests/unit/test_config.py",
    tags = ["unit"],
    deps = [":flow_backend_lib"],
)

py_test(
    name = "roles_test",
    srcs = ["tests/integration/test_roles.py"],
    main = "tests/integration/test_roles.py",
    tags = ["integration"],
    deps = [
        ":flow_backend_lib",
        "@pypi//httpx",
    ],
)

py_test(
    name = "migrations_test",
    srcs = ["tests/integration/test_migrations.py"],
    main = "tests/integration/test_migrations.py",
    tags = ["requires-docker", "integration"],
    data = [
        "alembic.ini",
        "migrations/script.py.mako",
    ],
    deps = [
        ":flow_backend_lib",
        "@pypi//alembic",
        "@pypi//sqlalchemy",
        "@pypi//testcontainers",
        "@pypi//psycopg2_binary",
    ],
)
