load("@aspect_rules_py//py:defs.bzl", "py_binary", "py_library", "py_test")

# App-specific composition: roles + config. Reusable plumbing lives in
# //packages/service. One build; role chosen at launch by `--role` (ADR-0015).
py_library(
    name = "flow_backend_lib",
    srcs = [
        "__init__.py",
        "config.py",
        "roles/__init__.py",
        "roles/api.py",
        "roles/gateway.py",
        "roles/ingestion.py",
        "roles/reconciler.py",
        "roles/worker.py",
        # api layer
        "api/__init__.py",
        "api/exception_handlers.py",
        "api/auth/__init__.py",
        "api/auth/dependencies.py",
        "api/auth/endpoints.py",
        "api/auth/schemas.py",
        "api/workflows/__init__.py",
        "api/workflows/endpoints.py",
        "api/workflows/schemas.py",
        "api/node_types/__init__.py",
        "api/node_types/endpoints.py",
        "api/node_types/schemas.py",
        # domain layer
        "domain/__init__.py",
        "domain/shared/__init__.py",
        "domain/shared/value_objects.py",
        "domain/identity/__init__.py",
        "domain/identity/models.py",
        "domain/identity/exceptions.py",
        "domain/identity/repositories.py",
        "domain/workflows/__init__.py",
        "domain/workflows/events.py",
        "domain/workflows/exceptions.py",
        "domain/workflows/models.py",
        "domain/workflows/repositories.py",
        "domain/node_types/__init__.py",
        "domain/node_types/models.py",
        "domain/node_types/repositories.py",
        "domain/node_types/catalog.py",
        # application layer
        "application/__init__.py",
        "application/workflows/__init__.py",
        "application/workflows/unit_of_work.py",
        "application/workflows/use_cases.py",
        "application/node_types/__init__.py",
        "application/node_types/unit_of_work.py",
        "application/node_types/use_cases.py",
        # infrastructure layer
        "infrastructure/__init__.py",
        "infrastructure/database.py",
        "infrastructure/auth/__init__.py",
        "infrastructure/auth/tenant_context.py",
        "infrastructure/auth/token_service.py",
        "infrastructure/auth/password.py",
        "infrastructure/identity/__init__.py",
        "infrastructure/identity/orm.py",
        "infrastructure/identity/repositories.py",
        "infrastructure/identity/resolver.py",
        "infrastructure/identity/auth_service.py",
        "infrastructure/outbox/__init__.py",
        "infrastructure/outbox/models.py",
        "infrastructure/outbox/repository.py",
        "infrastructure/outbox/relay.py",
        "infrastructure/workflows/__init__.py",
        "infrastructure/workflows/orm.py",
        "infrastructure/workflows/repositories.py",
        "infrastructure/node_types/__init__.py",
        "infrastructure/node_types/orm.py",
        "infrastructure/node_types/repositories.py",
        # containers
        "containers/__init__.py",
        "containers/identity.py",
        "containers/workflows.py",
        "containers/node_types.py",
        # migrations
        "migrations/__init__.py",
        "migrations/env.py",
        "migrations/versions/__init__.py",
        "migrations/versions/0001_initial_schema.py",
        "migrations/versions/0002_full_schema.py",
        "migrations/versions/0003_user_credentials.py",
        "migrations/versions/0004_membership_lookup.py",
    ],
    imports = ["../.."],
    visibility = ["//visibility:public"],
    deps = [
        "//packages/common",
        "//packages/service",
        "@pypi//alembic",
        "@pypi//asyncpg",
        "@pypi//dependency_injector",
        "@pypi//fastapi",
        "@pypi//pydantic",
        "@pypi//pydantic_settings",
        "@pypi//pyjwt",
        "@pypi//sqlalchemy",
    ],
)

py_binary(
    name = "flow_backend",
    srcs = ["main.py"],
    main = "main.py",
    visibility = ["//visibility:public"],
    deps = [":flow_backend_lib"],
)

# Apply Alembic migrations: `bazel run //apps/flow_backend:migrate`.
# Connects as the owner via MIGRATION_DATABASE_URL (see migrations/env.py).
py_binary(
    name = "migrate",
    srcs = ["migrate.py"],
    data = [
        "alembic.ini",
        "migrations/script.py.mako",
    ],
    main = "migrate.py",
    visibility = ["//visibility:public"],
    deps = [":flow_backend_lib"],
)

# Seed a dev account (org + user + admin membership): `bazel run //apps/flow_backend:seed_dev`.
# Connects as the owner via MIGRATION_DATABASE_URL (bypasses RLS for the membership insert).
py_binary(
    name = "seed_dev",
    srcs = ["seed_dev.py"],
    main = "seed_dev.py",
    visibility = ["//visibility:public"],
    deps = [":flow_backend_lib"],
)

py_test(
    name = "models_test",
    srcs = ["tests/unit/domain/workflows/test_models.py"],
    main = "tests/unit/domain/workflows/test_models.py",
    tags = ["unit"],
    deps = [":flow_backend_lib"],
)

py_test(
    name = "use_cases_test",
    srcs = ["tests/unit/application/workflows/test_use_cases.py"],
    main = "tests/unit/application/workflows/test_use_cases.py",
    tags = ["unit"],
    deps = [":flow_backend_lib"],
)

py_test(
    name = "config_test",
    srcs = ["tests/unit/test_config.py"],
    main = "tests/unit/test_config.py",
    tags = ["unit"],
    deps = [":flow_backend_lib"],
)

py_test(
    name = "roles_test",
    srcs = ["tests/integration/test_roles.py"],
    main = "tests/integration/test_roles.py",
    tags = ["integration"],
    deps = [
        ":flow_backend_lib",
        "@pypi//httpx",
    ],
)

py_test(
    name = "migrations_test",
    srcs = ["tests/integration/test_migrations.py"],
    data = [
        "alembic.ini",
        "migrations/script.py.mako",
    ],
    main = "tests/integration/test_migrations.py",
    tags = [
        "integration",
        "requires-docker",
    ],
    deps = [
        ":flow_backend_lib",
        "@pypi//alembic",
        "@pypi//psycopg2_binary",
        "@pypi//sqlalchemy",
        "@pypi//testcontainers",
    ],
)

py_test(
    name = "auth_unit_test",
    srcs = ["tests/unit/auth/test_auth.py"],
    main = "tests/unit/auth/test_auth.py",
    tags = ["unit"],
    deps = [
        ":flow_backend_lib",
        "@pypi//pyjwt",
    ],
)

py_test(
    name = "node_types_unit_test",
    srcs = ["tests/unit/domain/node_types/test_output_spec.py"],
    main = "tests/unit/domain/node_types/test_output_spec.py",
    tags = ["unit"],
    deps = [":flow_backend_lib"],
)

py_test(
    name = "node_types_integration_test",
    srcs = ["tests/integration/test_node_types.py"],
    data = [
        "alembic.ini",
        "migrations/script.py.mako",
    ],
    main = "tests/integration/test_node_types.py",
    tags = [
        "integration",
        "requires-docker",
    ],
    deps = [
        ":flow_backend_lib",
        "@pypi//alembic",
        "@pypi//httpx",
        "@pypi//psycopg2_binary",
        "@pypi//sqlalchemy",
        "@pypi//testcontainers",
    ],
)

py_test(
    name = "workflows_integration_test",
    srcs = ["tests/integration/test_workflows.py"],
    data = [
        "alembic.ini",
        "migrations/script.py.mako",
    ],
    main = "tests/integration/test_workflows.py",
    tags = [
        "integration",
        "requires-docker",
    ],
    deps = [
        ":flow_backend_lib",
        "@pypi//alembic",
        "@pypi//httpx",
        "@pypi//psycopg2_binary",
        "@pypi//sqlalchemy",
        "@pypi//testcontainers",
    ],
)

py_test(
    name = "auth_integration_test",
    srcs = ["tests/integration/test_auth.py"],
    data = [
        "alembic.ini",
        "migrations/script.py.mako",
    ],
    main = "tests/integration/test_auth.py",
    tags = [
        "integration",
        "requires-docker",
    ],
    deps = [
        ":flow_backend_lib",
        "@pypi//alembic",
        "@pypi//httpx",
        "@pypi//psycopg2_binary",
        "@pypi//sqlalchemy",
        "@pypi//testcontainers",
    ],
)
