load("@aspect_rules_py//py:defs.bzl", "py_binary", "py_library", "py_test")

# Pure graph definitions (layer 1) - no Temporal dependency, unit-testable.
py_library(
    name = "graphs",
    srcs = ["example_graph.py"],
    imports = ["../.."],
    deps = ["//libs/workflow_engine"],
)

# Leaf activities: the only place I/O / side effects live.
py_library(
    name = "activities",
    srcs = ["activities.py"],
    imports = ["../.."],
    deps = ["@pypi//temporalio"],
)

# Worker process: registers GraphWorkflow + activities and polls the task queue.
py_binary(
    name = "worker",
    srcs = ["worker.py"],
    main = "worker.py",
    deps = [
        ":activities",
        "//libs/workflow_engine:workflow_engine_temporal",
        "@pypi//temporalio",
    ],
)

# Client that starts one workflow run.
py_binary(
    name = "starter",
    srcs = ["starter.py"],
    main = "starter.py",
    deps = [
        ":graphs",
        "//libs/workflow_engine:workflow_engine_temporal",
        "@pypi//temporalio",
    ],
)

py_test(
    name = "example_graph_test",
    srcs = ["example_graph_test.py"],
    main = "example_graph_test.py",
    deps = [
        ":graphs",
        "//libs/workflow_engine",
    ],
)
